ipc/ipdl/test/ipdl/error/ExtendedAttrRepeated.ipdlh
//error: Repeated extended attribute `RefCounted'

[RefCounted, RefCounted] using SomeType from "SomeFile.h";

struct ExtendedAttrRepeated {};
